--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:tools": "vite --mode development",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "vite build --mode analyze",
+    "test:performance": "node scripts/performance-test.js",
+    "test:compatibility": "node scripts/compatibility-test.js",
+    "test:load": "node scripts/load-test.js",
+    "test:all": "npm run test:performance && npm run test:compatibility && npm run test:load"
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
@@ -16,8 +22,10 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
-    "sonner": "^1.7.1"
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
