--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:all": "npm run test:performance && npm run test:compatibility && npm run test:load"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^1.0.3",
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
