--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "dev:tools": "vite --mode development",
+    "dev:server": "node scripts/dev-server.js",
     "build": "vite build",
     "preview": "vite preview",
     "analyze": "vite build --mode analyze",
+    "test:api": "node scripts/test-api.js",
     "test:performance": "node scripts/performance-test.js",
     "test:compatibility": "node scripts/compatibility-test.js",
     "test:load": "node scripts/load-test.js",
@@ -30,6 +32,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "vite": "^6.3.5"
   }
 }
