--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "api/games.js": {
       "maxDuration": 30
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 } 
